# pygnucash

./: .gitignore  .lvimrc  .travis.yml  COPYING  README.md  edit.py  flake.nix  gc2ledger.py  get_quotes.py  gnucash.py  gnucash2ledger.py  gnucashutil.py  pyproject.toml  stockreport.py
gnucash/: __init__.py
scripts/: lint.sh
test/: .gitignore  gc3dates.reference  gc3dates.test.sh  minimal.test.sh  run_tests.sh  simple.test.sh  stockreport_v0.reference  stockreport_v0.test.sh  stockreport_v1.reference  stockreport_v1.test.sh  stockreport_v2.reference  stockreport_v2.test.sh  stuff.reference  stuff.test.sh
test/Inputs/: brok.sql  brokerage.gnucash  gc3dates.sql  minimal.gnucash  minimal.sql  simple.gnucash  simple.sql  stuff.gnucash  stuff.sql
